@@ -1,3 +1,9 @@
+Tue Feb 19 17:16:07 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
+
+        * MDE/GME/paradigms/PICML/modelin/Picmlin_App.cpp:
+        
+          Removed some of the unnecessary command-line options.
+
 Tue Feb 19 16:39:09 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
 
         * MDE/GME/paradigms/PICML/modelin:
@@ -10,8 +16,8 @@ Tue Feb 19 16:39:09 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
         * MDE/GME/paradigms/PICML/modelin/Scatter_To_Picml.cpp:
         * MDE/GME/paradigms/PICML/modelin/picmlin.cpp:
         * MDE/GME/paradigms/PICML/modelin/picmlin.mpc:
-        
-          Initial implementation for importing scatter models into 
+
+          Initial implementation for importing scatter models into
           a PICML project.
 
         * docs/presentations/CBML-WML.ppt:
